src/main.css
@import url("https://fonts.googleapis.com/css2?family=Noto+Sans:wght@200;400;700&display=swap");

:root {
  --primary: #fff;
  --secondary-medium: #383838;
  --secondary-light: #757575;
  --red-notification: #f72121;
  --green-light: #fbfce1;
  --green-medium: #aeaf4f;
  --shadow-dark: rgba(0, 0, 0, 0.25);
  --shadow-light: rgba(0, 0, 0, 0.07);
  --blue-light: rgb(213, 247, 245);
  --blue-medium: rgb(90, 175, 170);
  --blue-dark: rgb(41, 70, 68);
  --red-light: rgb(238, 187, 187);
  --red-medium: rgb(206, 55, 55);
}
body {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: "Noto Sans", sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}
::-webkit-scrollbar {
  width: 10px;
}

/* Track */
::-webkit-scrollbar-track {
  background: #e0e0e0;
}

/* Handle */
::-webkit-scrollbar-thumb {
  background: #888;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: #555;
}

